[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeuc-vector-db"
version = "0.1.0"
description = "AEUC Vector Field Database — IGlyph / PGlyph semantic embedding layer over glyph-registry"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage   = "https://github.com/Constitutional-Solutions/aeuc-vector-db"
Repository = "https://github.com/Constitutional-Solutions/aeuc-vector-db"

[tool.hatch.build.targets.wheel]
packages = ["aeuc_vector_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
